# solidwork

./: .gitignore  CMakeLists.txt  README.md  ai_vision_client.py  assembly_automation.cpp  build_and_run.sh  desktop_automation.py  enhanced_workflow.py  generate_cpp.py  nvidia_ai_agent.py  requirements.txt  run_workflow.py  solidworks_automation.py
.orion/backups/: README.md.1775797539391.bak  README.md.1775798236761.bak  requirements.txt.1775795862029.bak
.orion/skills/: agent-workflow.md  brainstorm.md  code-review.md  commit-standards.md  plan-first.md  test-driven.md
